--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "budgeta",
+    "name": "Budgeta",
     "slug": "budgeta",
     "version": "1.0.0",
     "orientation": "portrait",
