--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "android": {
       "package": "com.javad.budgeta",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/splash.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
