--- a/eas.json
+++ b/eas.json
@@ -15,10 +15,8 @@
       }
     },
     "production": {
-      "autoIncrement": true,
-      "android": {
-        "buildType": "app-bundle"
-      }
+      "autoIncrement": true
+     
     }
   },
   "submit": {
